# Copper-Math

./: .gitignore  CMakeLists.txt  Copper-Math.sln  Copper-Math.vcxproj  Makefile  premake5.lua
CMath/: App.cpp  CMakeLists.txt  CMath.h  Makefile  Matrix.h  Matrix3.h  Matrix4.h  MatrixTransform.h  MatrixViewAndProjection.h  NumberManipulation.h  Quaternion.h  Random.h  Trigonometry.h  Vector2.h  Vector3.h  Vector4.h  Vectors.h  premake5.lua
